--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,6 @@ button {
     cursor: pointer;
 }
 
+body {
+    width: auto;
+}
